--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "socket.io-client": "^4.0.0",
     "vue": "^2.6.11",
     "vue-pincode-input": "^0.4.0",
