--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "socket.io-client": "^4.0.0",
     "vue": "^2.6.11",
     "vue-pincode-input": "^0.4.0",
     "vue-router": "^3.2.0",
-    "vue-socket.io": "^3.0.10",
-    "vuetify": "^2.4.0",
-    "vuex-persistedstate": "^4.0.0-beta.3"
+    "vuetify": "^2.4.0"
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
